[Bug 889272] Fix z-index of contrib tools.

--- a/kitsune/sumo/static/less/wiki.less
+++ b/kitsune/sumo/static/less/wiki.less
@@ -33,7 +33,7 @@ article {
     > div {
       display: inline;
       position: relative;
-      z-index: 10;
+      z-index: 5;
 
       .selectbox-wrapper {
         background: #fff;
@@ -775,7 +775,7 @@ textarea[name="content"] {
     position: fixed;
     top: 50%;
     width: 165px;
-    z-index: 10;
+    z-index: 5;
 
     h1 {
       font-size: 20px;
@@ -788,7 +788,7 @@ textarea[name="content"] {
     position: absolute;
     right: 10px;
     top: 10px;
-    z-index: 11;
+    z-index: 6;
     &:hover {
       color: #999;
       cursor: pointer;
@@ -812,7 +812,7 @@ textarea[name="content"] {
     position: fixed;
     top: 50%;
     width: 165px;
-    z-index: 10;
+    z-index: 5;
   }
 
   .open {
